--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cmsone-website",
-  "version": "1.0.3",
-  "description": "CMS One website",
+  "version": "1.0.4",
+  "description": "Simple light weight node-express based CMS Website",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
