--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmsone-website",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Simple light weight node-express based CMS Website",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "mongodb": "^3.6.1",
+    "request": "^2.88.2",
     "uuid": "^8.3.0"
   }
 }
