--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "cmsone-website",
-  "version": "1.1.5",
+  "version": "1.5.0",
   "description": "Simple light weight node-express based CMS Website",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "npm run babel && npm run browserify && npm run uglifyjs",
+    "babel": "babel public/js/common -d public/js/final",
+    "browserify": "browserify public/js/final/app-bootstrapper.js -o public/js/final/bundle.js",
+    "uglifyjs": "uglifyjs --compress --mangle --output public/js/final/bundle.min.js -- public/js/final/bundle.js",
+    "admbuild": "npm run admbabel && npm run admbabelassets && npm run admbrowserify && npm run admuglifyjs",
+    "admbabel": "babel public/admin/js -d public/admin/final",
+    "admbabelassets": "babel public/admin/assets/demo -d public/admin/final",
+    "admbrowserify": "browserify public/admin/final/index.js -o public/admin/final/bundle.js",
+    "admuglifyjs": "uglifyjs --compress --mangle --output public/admin/final/bundle.min.js -- public/admin/final/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +42,10 @@
   },
   "devDependencies": {
     "mocha": "^8.2.1",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "browserify": "^17.0.0",
+    "uglify-js": "^3.12.0"
   }
 }
